# advent-of-code

./: .clang-format  .clangd  CMakeLists.txt
include/: aoc.hpp  aoc_main.hpp
puzzles/: CMakeLists.txt
puzzles/2025/: CMakeLists.txt
puzzles/2025/day01/: CMakeLists.txt  complex.cpp  reference.cpp  simple.cpp  solution.cpp
puzzles/2025/day02/: CMakeLists.txt  reference.cpp
puzzles/2025/day03/: CMakeLists.txt  solution.cpp
